clant (1.0.1) unstable;

  * Avoid running tools on sources in the build directory
  * Print quoted includes first

 -- David Robillard <d@drobilla.net>  Tue, 15 Dec 2020 00:59:31 +0000

clant (1.0.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Sun, 13 Dec 2020 19:00:30 +0000