@@ -1,9 +1,10 @@
 clant (1.0.1) unstable;
 
   * Avoid running tools on sources in the build directory
+  * Print a warning when include-what-you-use fails
   * Print quoted includes first
 
- -- David Robillard <d@drobilla.net>  Tue, 15 Dec 2020 00:59:31 +0000
+ -- David Robillard <d@drobilla.net>  Tue, 15 Dec 2020 18:43:20 +0000
 
 clant (1.0.0) stable;
 
